# aperiodic-codes

./: .gitignore  Manifest.toml  README.md  app.py  index.html  index.md  package-lock.json  package.json  pyproject.toml  setup.py  styles.css  tmp.txt  utils.js
.parcel-cache/: data.mdb  lock.mdb
data/: Hz_outputBalancedProduct.txt  h1_inputBalancedProduct.txt  h2_inputBalancedProduct.txt  haah_code_hx_L4.txt  haah_code_hz_L4.txt  hx_outputBalancedProduct.txt
drafts/: 3d_viewer.ipynb  3d_viewer.py  balanced_product.ipynb  check_expander.ipynb  output.gltf  point_cloud.gltf  point_cloud.html  test.gltf  three_dim_cnp.py  three_dim_code.py  two_dim_cnp.py  visualize_commutation.ipynb
figures/: norm.mplstyle  norm2.mplstyle
graveyard/: README.md  confinement_ldpc_code.py  energy_barrier_scaling_toric_code.py  gen_ldpc_code.py  gen_ldpc_code_hgp.py  gen_local_ldpc_code.py  gen_local_ldpc_code_bound_below.py  gen_local_ldpc_code_quasicrystal.py  gen_penrose_laplacian_code.py  gen_penrose_p3_tiling.py  gen_pinwheel_tiling.py  gen_psi_quad_autopatch_selection_type1H_typeAprimeV.py  gen_psi_quad_autopatch_selection_type1H_typeAprime_special_corners.py  gen_psi_quad_gen15_brute_force.py  gen_psi_quad_tiling_substitution.py  gen_square_triangle_tiling.py  helpers_distance.py  no_confinement_shs.py  psi_tiling_boundary_vertices_gen20.txt  psi_tiling_boundary_vertices_gen20_ensemble_trial.txt  psi_tiling_boundary_vertices_gen20_type6_typeC.txt  psi_tiling_boundary_vertices_gen21_type5_typeC.txt  special_treament_pinwheel.py
lib/: open.js
run/: kd_scaling.ipynb  (+17 more)
(+268 files in other folders)
