[tool.poetry]
name = "aperiodic-codes"
version = "0.1.0"
description = ""
authors = ["Rosetta-Tan <rosetta_tan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cython = "^3.0"
ldpc = "^0.1"
bposd = "^1.6"
networkx = "^3.1"

[tool.poetry.extras]
web = ["flask", "flask_cors"]
graphics = ["matplotlib", "pycairo"]